--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  height: 100%;
   .sidenav-container {
     flex: 1;
     background: $main-background-color;
@@ -17,6 +18,8 @@
     }
     .main-container {
       padding: 16px;
+      height: 100%;
+      box-sizing: border-box;
     }
   }
 }
