--- a/src/app/public/umb/umb.component.scss
+++ b/src/app/public/umb/umb.component.scss
@@ -19,3 +19,24 @@
 mat-select{
     width: 100px;
 }
+.example-headers-align .mat-expansion-panel-header-title,
+.example-headers-align .mat-expansion-panel-header-description {
+  flex-basis: 0;
+}
+
+.example-headers-align .mat-expansion-panel-header-description {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.example-headers-align .mat-form-field + .mat-form-field {
+  margin-left: 8px;
+}
+.mat-form-field{
+    margin: 5px 30px;
+}
+.mat-action-row{
+    justify-content: flex-end;
+    align-items: baseline;
+    padding: 0px 10px;
+}
