--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -50,7 +50,7 @@
         <mat-icon aria-hidden="false">login</mat-icon>
         <span>Kirish</span>
       </button>
-      <button mat-menu-item [routerLink]="['/register']">
+      <button mat-menu-item [routerLink]="['/login/register']">
         <mat-icon aria-hidden="false">how_to_reg</mat-icon>
         <span>Ro'yxatdan o'tish</span>
       </button>
