--- a/src/app/login/register/register.component.scss
+++ b/src/app/login/register/register.component.scss
@@ -4,18 +4,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  min-height: 100%;
   position: relative;
   .content {
     z-index: 1;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 20px auto;
     .app-name {
       margin-top: 0px;
       padding-bottom: 10px;
       font-size: 32px;
-      text-align: center;
     }
     .login-form {
       padding: 40px;
@@ -52,7 +52,4 @@
   margin-top: 30px;
   display: inline-block;
   margin-left: auto ;
-}
-.w-100{
-  width: 100%;
 }
