--- a/src/app/public/home.component.html
+++ b/src/app/public/home.component.html
@@ -1,3 +1,3 @@
-<h1>BUG‘DOY NAVLARINING KASALLIKLARGA VA QURG‘OQCHILIKKA CHIDAMLILIK DARAJASING UMUMLASHGAN BAHOLARINI HISOBLOVCHI
+<h1>BUG‘DOY NAVLARINING KASALLIKLARGA VA QURG‘OQCHILIKKA CHIDAMLILIK DARAJASINING UMUMLASHGAN BAHOLARINI HISOBLOVCHI
   INTELEKTUAL TIZIM</h1>
   
