--- a/src/app/public/umb/umb.component.html
+++ b/src/app/public/umb/umb.component.html
@@ -1,3 +1,4 @@
+<!-- umb.component.html -->
 <mat-accordion class="example-headers-align">
     <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" hideToggle>
         <mat-expansion-panel-header>
@@ -119,5 +120,4 @@
             <button mat-button color="primary" (click)="nextStep()">End</button>
         </mat-action-row>
     </mat-expansion-panel>
-
 </mat-accordion>
