--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -2,7 +2,9 @@
   <button type="button" mat-icon-button (click)="toggleSidebar()">
     <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
   </button>
+    <img src="assets/icons/icon-72x72.png" alt="">
   <div class="nav-brand">
+  
     {{"home.title"|translate}}
 
   </div>
