--- a/src/app/public/home.component.html
+++ b/src/app/public/home.component.html
@@ -1,5 +1,6 @@
-
 <img src="assets/logo2.svg" alt="">
 <h1>BUG‘DOY NAVLARINING KASALLIKLARGA VA QURG‘OQCHILIKKA CHIDAMLILIK DARAJASINING UMUMLASHGAN BAHOLARINI HISOBLOVCHI
   INTELEKTUAL TIZIM</h1>
-  
+<div mat-row style="text-align: center;">
+  <a [routerLink]="['umb']" color="primary" mat-raised-button>HISOBLASH</a>
+</div>
