--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -10,17 +10,10 @@
     <mat-icon class="sidenav-icon">
       show_chart
     </mat-icon>
-    Laboratoriyalar
-  </a>
-  <mat-divider></mat-divider>
-  <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/umb']">
-    <mat-icon class="sidenav-icon">
-      show_chart
-    </mat-icon>
     UMB
   </a>
   <mat-divider></mat-divider>
-  <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/umb']">
+  <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/help']">
     <mat-icon class="sidenav-icon">
       help
     </mat-icon>
