--- a/src/app/top-nav/top-nav.component.scss
+++ b/src/app/top-nav/top-nav.component.scss
@@ -12,6 +12,8 @@
   text-align: center;
   max-width: 70vw;
   overflow: hidden;
+  display: flex;
+  align-items: center;
 }
 .topnav-icon {
   text-decoration: none;
