--- a/src/app/public/help/help.component.html
+++ b/src/app/public/help/help.component.html
@@ -9,7 +9,7 @@
     </mat-card-content>
     <mat-card-actions>
         <div mat-row style="text-align: center;">
-            <a [routerLink]="['/umb']" color="primary" mat-raised-button>TAJRIBANI BOSHLASH</a>
+            <a [routerLink]="['/hisoblash']" color="primary" mat-raised-button>TAJRIBANI BOSHLASH</a>
           </div>
     </mat-card-actions>
     <!-- <mat-card-footer>
