--- a/src/app/public/umb/umb.component.html
+++ b/src/app/public/umb/umb.component.html
@@ -6,7 +6,7 @@
                 Ma'lumotlarni yuklash
             </mat-panel-title>
             <mat-panel-description>
-                Exel fayl yuklang yoki to'ldiring
+                Excel(.xlsx yoki .xls) faylni yuklang yoki jadvalni to'ldiring
                 <mat-icon>text_fields</mat-icon>
             </mat-panel-description>
         </mat-expansion-panel-header>
