--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -6,11 +6,11 @@
     Bosh sahifa
   </a>
   <mat-divider></mat-divider>
-  <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/umb']">
+  <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/hisoblash']">
     <mat-icon class="sidenav-icon">
-      show_chart
+      donut_large
     </mat-icon>
-    UMB
+    Hisoblash
   </a>
   <mat-divider></mat-divider>
   <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/help']">
