--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -10,7 +10,7 @@
     <mat-icon class="sidenav-icon">
       donut_large
     </mat-icon>
-    Hisoblash
+    BAHOLASH
   </a>
   <mat-divider></mat-divider>
   <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/help']">
